Rechanged title name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!--This is home page-->
-    <div class="name"><a class="homepage" href="index.html">EDUCATION SP<span class="logo">O</span>T</a></div>
+    <div class="name"><a class="homepage" href="index.html">EDU SP<span class="logo">O</span>T</a></div>
         <form class="form"> 
             <p class="selorsign">Select Which  We Are Enter</p>
             <div class="homebutton">
